--- a/problem_4.html
+++ b/problem_4.html
@@ -2,6 +2,10 @@
 	<head>
 		<title>Simple Line Graph using SVG and d3.js</title>
 		<script src="http://mbostock.github.com/d3/d3.v2.js"></script>
+		  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<left>
+			<h1>Code Volume per user vs time</h1>
+		</left>
 		<style>
 			/* tell the SVG path to be a thin blue line without any area fill */
 			path {
@@ -47,6 +51,49 @@
 		var h = 400 - m[0] - m[2]; // height
 		
 		// create a simple data array that we'll plot with a line (this array represents only the Y values, X will just be the index location)
+		var url = "https://api.github.com/repos/ccgus/fmdb/commits" 
+		d3.json(url, function (jsondata) {
+			var commits = jsondata;
+			var numOfNodes = commits.length;
+			    var authors = commits.map(function(data){
+			      return data["commit"]["author"]["name"];
+			    })
+
+			    var uniqueAuthors = []
+			    $.each(authors, function(i, el){
+			      if($.inArray(el, uniqueAuthors) === -1) uniqueAuthors.push(el);
+			    });
+			    console.log(uniqueAuthors)
+			for (var i =0; i <5; i++){
+				var currentCommit = commits[i]
+				var sha = currentCommit["sha"]
+				console.log(sha)
+				var newString = url + "/" + sha
+				
+
+				var authors = {}
+				d3.json(newString, function (commitData) {
+					var author = commitData["author"]["name"]
+					if (author in authors){
+						var points = new Array();
+						points = authors[author]
+						console.log(authors)
+						var last = points[points.length - 1]
+						var additions = commitData["stats"]["additions"]
+						var deletions = commitData["stats"]["deletions"]
+						var newLast = last + additions - deletions;
+						authors[author] = points.push(newLast)
+					}else{
+						
+						var additions = commitData["stats"]["additions"]
+						var deletions = commitData["stats"]["deletions"]
+						var net = additions - deletions
+						authors{}
+					}
+				})
+				console.log(authors)
+			}
+		})
 		var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
  
 		// X scale will fit all values from data[] within pixels 0-w
